[package]
name = "rsdsl_ntp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
hickory-resolver = { version = "0.24.0", default-features = false, features = ["tokio-runtime"] }
nix = { version = "0.26.2", features = ["time"] }
ntp = "0.5.0"
rsdsl_ip_config = { git = "https://github.com/rsdsl/ip_config.git", version = "0.2.4" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "time", "fs", "signal"] }

[build-dependencies]
build-data = "0.1.5"
