[package]
name = "rsdsl_ntp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
hickory-resolver = { version = "0.24.0", default-features = false, features = ["tokio-runtime"] }
nix = { version = "0.26.2", features = ["time"] }
ntp = "0.5.0"
rsdsl_netlinklib = { git = "https://github.com/rsdsl/netlinklib.git", version = "0.4.5", default-features = false, features = ["status"] }
sysinfo = { version = "0.29.10", default-features = false }
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "time", "fs", "signal"] }

[build-dependencies]
build-data = "0.1.5"
